Das neue Spiel "SUCH DEN FEHLER"
Finden sie jetzt den Fehler und gewinnen sie Zusatz-Arbeit++ !

--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -15,6 +15,9 @@ input[type=text],textarea {
 input[type=password],textarea {
     background-color: #000000;
 }
+input[type=submit],textarea {
+    background-color: #000000;
+}
 .page {
 	width: 850px;
 }
