--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -9,13 +9,7 @@
 body {
     background-color: #000000;
 }
-input[type=text],textarea {
-    background-color: #000000;
-}
-input[type=password],textarea {
-    background-color: #000000;
-}
-input[type=submit],textarea {
+input[type=password],input[type=text],input[type=submit],textarea {
     background-color: #000000;
 }
 .page {
