--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -13,7 +13,8 @@ input[type=password],input[type=text],input[type=submit],textarea {
     background-color: #000000;
 }
 .page {
-	width: 850px;
+	margin:auto;
+	width: 1200px;
 }
 a img {
 	border: 0px;
