--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -63,7 +63,7 @@ a img {
 	height:75px;
 }
 #nahrung_bar, #wasser_bar {
-	min-width:70px;
+	min-width:100px;
 	height:10px;
 	float:left;	
 	padding: 0px;
@@ -71,13 +71,19 @@ a img {
 }
 
 #exp_bar {
-	min-width:1000px;
+	min-width:1200px;
 	height:15px;
 	float:left;
 	padding: 0px;
 	margin: 0px;
 }
 .exp-text {
+    position: absolute;
+    left: 50%;
+    top: 1px;
+	font-size: 10px;
+  }
+.wasser-text {
     position: absolute;
     left: 50%;
     top: 1px;
