--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -32,7 +32,7 @@ a img {
     color: #000000;
 }
 .tr_bg td {
-    background-color: #C0C0C0;
+    background-color: #555555;
 }
 
 .karte tr td {
@@ -63,8 +63,8 @@ a img {
 	height:75px;
 }
 #nahrung_bar, #wasser_bar {
-	min-width:100px;
-	height:10px;
+	min-width:110px;
+	height:15px;
 	float:left;	
 	padding: 0px;
 	margin: 0px;	
@@ -72,7 +72,7 @@ a img {
 
 #exp_bar {
 	min-width:1200px;
-	height:15px;
+	height:11px;
 	float:left;
 	padding: 0px;
 	margin: 0px;
@@ -80,16 +80,21 @@ a img {
 .exp-text {
     position: absolute;
     left: 50%;
-    top: 1px;
-	font-size: 10px;
+    padding-bottom: 2px;
+	font-size: 9px;
   }
 .wasser-text {
     position: absolute;
-    left: 50%;
+    left: 30%;
     top: 1px;
 	font-size: 10px;
   }
-
+.nahrung-text {
+    position: absolute;
+    left: 30%;
+    top: 1px;
+	font-size: 10px;
+  }
 
 #nahrung_bar_status, #wasser_bar_status {
 	min-width:200px;
