--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -97,14 +97,14 @@ a img {
   }
 
 #nahrung_bar_status, #wasser_bar_status {
-	min-width:275px;
+	width: 100%;
 	height:5px;
 	float:left;	
 	padding: 0px;
 	margin: 0px;	
 }
 #exp_bar_status {
-	width:560px;
+	width: 100%;
 	height:5px;
 	float:left;
 	padding: 0px;
@@ -153,4 +153,8 @@ a img {
     background-image: url('picture/leiste.jpg');
     height: 40px;
     padding-top: 10px;
+}
+.text_rechts {
+	text-align:right;
+	padding-right: 20px;
 }
