--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -18,6 +18,9 @@ h1 {
 padding-left: 175px;
 }
 
+select {
+  background-color: #000000;  
+}
 input[type=password],input[type=text],input[type=submit],input[type=Reset],textarea {
     background-color: #000000;
 }
