--- a/_stylesheet.css
+++ b/_stylesheet.css
@@ -1,161 +1,171 @@
 * {
-	font-family: Verdana; 
-	font-size: 14px;
-	vertical-align:top;
-	border-collapse:collapse;
-	text-align: left;
-    color: #ffffff;
+  font-family: Verdana;
+  font-size: 14px;
+  vertical-align:top;
+  border-collapse:collapse;
+  text-align: left;
+  color: #ffffff;
 }
 body {
-    background-color: #000000;
+  background-color: #000000;
 }
 
 h1 {
-    font-size: 15pt;
+  font-size: 15pt;
 }
 
 #header {
-padding-left: 175px;
+  padding-left: 175px;
 }
 
 select {
-  background-color: #000000;  
+  background-color: #000000;
 }
 input[type=password],input[type=text],input[type=submit],input[type=Reset],textarea {
-    background-color: #000000;
+  background-color: #000000;
 }
 .page {
-	margin:auto;
-	width: 1200px;
+  margin:auto;
+  width: 1200px;
 }
 a img {
-	border: 0px;
+  border: 0px;
 }
 #schwarz {
-    color: #000000;
+  color: #000000;
 }
 .tr_bg td {
-    background-color: #555555;
+  background-color: #555555;
 }
 .karte {
-	background-position: 50% 50%;
-	background-repeat: no-repeat;
-	-moz-background-size: 100%; /* firefox/seamonkey [geckos] */
-	-webkit-background-size: 100%; /* safari, chrome/iron [webkits] */
-	-o-background-size: 100%; /* opera 9 */
-	-ms-background-size: 100%; /* internet explorer ab version 9 */
-	background-size: 100%; /* css definition (ab firefox 4, opera 10) */
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  -moz-background-size: 100%; /* firefox/seamonkey [geckos] */
+  -webkit-background-size: 100%; /* safari, chrome/iron [webkits] */
+  -o-background-size: 100%; /* opera 9 */
+  -ms-background-size: 100%; /* internet explorer ab version 9 */
+  background-size: 100%; /* css definition (ab firefox 4, opera 10) */
 }
 
 .karte tr td {
-	border-style:solid;
-	border-width:1px;
+  border-style:solid;
+  border-width:1px;
 }
 .karte_celle {
-	text-align: center;
-	vertical-align: middle;
+  text-align: center;
+  vertical-align: middle;
 }
 .item {
-	width:50px;
-	height:50px;
+  width:50px;
+  height:50px;
 }
 .equip {
-	width:75px;
-	height:75px;
+  width:75px;
+  height:75px;
 }
 #nahrung_bar, #wasser_bar {
-	min-width:110px;
-	height:15px;
-	float:left;	
-	padding: 0px;
-	margin: 0px;	
+  min-width:110px;
+  height:15px;
+  float:left;
+  padding: 0px;
+  margin: 0px;
 }
 
 #exp_bar {
-	min-width:1200px;
-	height:11px;
-	float:left;
-	padding: 0px;
-	margin: 0px;
+  min-width:1200px;
+  height:11px;
+  float:left;
+  padding: 0px;
+  margin: 0px;
 }
 .exp-text {
-    position: absolute;
-    left: 50%;
-    padding-bottom: 2px;
-	font-size: 9px;
-  }
+  position: absolute;
+  left: 50%;
+  padding-bottom: 2px;
+  font-size: 9px;
+}
 .wasser-text {
-    position: absolute;
-    left: 30%;
-    top: 1px;
-	font-size: 10px;
-  }
+  position: absolute;
+  left: 30%;
+  top: 1px;
+  font-size: 10px;
+}
 .nahrung-text {
-    position: absolute;
-    left: 30%;
-    top: 1px;
-	font-size: 10px;
-  }
+  position: absolute;
+  left: 30%;
+  top: 1px;
+  font-size: 10px;
+}
 
 #nahrung_bar_status, #wasser_bar_status {
-	width: 100%;
-	height:5px;
-	float:left;	
-	padding: 0px;
-	margin: 0px;	
+  width: 100%;
+  height:5px;
+  float:left;
+  padding: 0px;
+  margin: 0px;
 }
 #exp_bar_status {
-	width: 100%;
-	height:5px;
-	float:left;
-	padding: 0px;
-	margin: 0px;
+  width: 100%;
+  height:5px;
+  float:left;
+  padding: 0px;
+  margin: 0px;
 }
 #nahrung_bar .ui-progressbar-value,#nahrung_bar_status .ui-progressbar-value, .nahrung_bg {
-	background-color:#ff6633;	
-	background-image: url(picture/hunger.png);
+  background-color:#ff6633;
+  background-image: url(picture/hunger.png);
 }
 #wasser_bar .ui-progressbar-value,#wasser_bar_status .ui-progressbar-value, .hunger_bg {
-	background-color:#3366ff;
-	background-image: url(picture/wasser.png);
+  background-color:#3366ff;
+  background-image: url(picture/wasser.png);
 }
 
 #exp_bar .ui-progressbar-value,#exp_bar_status .ui-progressbar-value, .hunger_bg {
-	background-color:#005544;
-	background-image: url(picture/exp.png);
+  background-color:#005544;
+  background-image: url(picture/exp.png);
 }
 .ui-progressbar {
-    position: relative;
+  position: relative;
 }
 .wasser_text {
-	color:#3366ff;
+  color:#3366ff;
 }
 .nahrung_text {
-	color:#ff6633;	
+  color:#ff6633;
 }
 .sklaven_text {
-    color: #666666;
+  color: #666666;
 }
 .Goldklumpen_text {
-    color: #FDD017;
+  color: #FDD017;
 }
 #progressbar .ui-progressbar-value {
-    background-color: green;
-    background-image: url(picture/progress.png);
+  background-color: green;
+  background-image: url(picture/progress.png);
 }
 .ui-dialog {
-    top: 250px !important;
-    left: 285px !important;
+  top: 250px !important;
+  left: 285px !important;
 }
 .ui-widget-overlay {
-    background: #5C5C5C !important;
+  background: #5C5C5C !important;
 }
 .leiste {
-    background-image: url('picture/leiste.jpg');
-    height: 40px;
-    padding-top: 10px;
+  background-image: url('picture/leiste.jpg');
+  height: 40px;
+  padding-top: 10px;
 }
 .text_rechts {
-	text-align:right;
-	padding-right: 20px;
+  text-align:right;
+  padding-right: 20px;
 }
+
+#nav {}
+#nav ul{ list-style-type:none; margin:0; padding:0; }
+#nav li { float:left; padding:0; margin:0;}
+#nav li a { width:150px; display:block; text-align:center; color:#FFFFFF; margin-right:5px; height:17px; line-height:17px; text-decoration:none; font-size:80%; border:1px solid #ccc; }
+#nav li a:hover { color:#f00; }
+#nav ul ul { display:none; position:absolute; z-index:999; }
+#nav li li { float:none; }
+#nav li li a { background:#000000!important; text-align:left; height:auto; line-height:1; width:auto; padding:8px 20px 8px 22px; border:1px solid #D0D0D0; border-top:none; margin-right:0; }
+* html li li { display:inline; } /* IE6 Bugfix... */
